syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.novatecgmbh.eventsourcing.axon";
option java_outer_classname = "UserServiceProto";

service UserService {
  rpc findAll(google.protobuf.Empty) returns (UserList) {}
}

message UserList {
  repeated User users = 1;
}

message User {
  string identifier = 1;
  string firstname = 2;
  string lastname = 3;
}

